@@ -1,26 +1,24 @@
 package no.nav.dolly.bestilling.arenaforvalter.command;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukere;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukereResponse;
-import no.nav.testnav.libs.reactivecore.utils.WebClientFilter;
-import no.nav.testnav.libs.securitycore.config.UserConstant;
-import org.springframework.http.HttpHeaders;
+import no.nav.testnav.libs.reactivecore.web.WebClientError;
+import no.nav.testnav.libs.reactivecore.web.WebClientHeader;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
-import reactor.util.retry.Retry;
 
-import java.time.Duration;
 import java.util.concurrent.Callable;
 
 import static no.nav.dolly.domain.CommonKeysAndUtils.CONSUMER;
 import static no.nav.dolly.domain.CommonKeysAndUtils.HEADER_NAV_CALL_ID;
 import static no.nav.dolly.domain.CommonKeysAndUtils.HEADER_NAV_CONSUMER_ID;
 import static no.nav.dolly.util.CallIdUtil.generateCallId;
-import static no.nav.dolly.util.TokenXUtil.getUserJwt;
 
 @RequiredArgsConstructor
+@Slf4j
 public class ArenaforvalterPostArenaBruker implements Callable<Flux<ArenaNyeBrukereResponse>> {
 
     private static final String ARENAFORVALTER_BRUKER = "/api/v1/bruker";
@@ -31,31 +29,27 @@ public class ArenaforvalterPostArenaBruker implements Callable<Flux<ArenaNyeBruk
 
     @Override
     public Flux<ArenaNyeBrukereResponse> call() {
-
-        return webClient.post().uri(
+        return webClient
+                .post()
+                .uri(
                         uriBuilder -> uriBuilder
                                 .path(ARENAFORVALTER_BRUKER)
                                 .build())
                 .header(HEADER_NAV_CALL_ID, generateCallId())
                 .header(HEADER_NAV_CONSUMER_ID, CONSUMER)
-                .header(HttpHeaders.AUTHORIZATION, "Bearer " + token)
-                .header(UserConstant.USER_HEADER_JWT, getUserJwt())
+                .headers(WebClientHeader.bearer(token))
                 .bodyValue(arenaNyeBrukere)
                 .retrieve()
                 .bodyToFlux(ArenaNyeBrukereResponse.class)
                 .map(response -> {
                     response.setStatus(HttpStatus.OK);
-                    response.setMiljoe(arenaNyeBrukere.getNyeBrukere().get(0).getMiljoe());
+                    response.setMiljoe(arenaNyeBrukere.getNyeBrukere().getFirst().getMiljoe());
                     return response;
                 })
-                .doOnError(WebClientFilter::logErrorMessage)
-                .onErrorResume(error ->
-                        Flux.just(ArenaNyeBrukereResponse.builder()
-                                .status(WebClientFilter.getStatus(error))
-                                .feilmelding(WebClientFilter.getMessage(error))
-                                .miljoe(arenaNyeBrukere.getNyeBrukere().get(0).getMiljoe())
-                                .build()))
-                .retryWhen(Retry.backoff(3, Duration.ofSeconds(5))
-                        .filter(WebClientFilter::is5xxException));
+                .doOnError(WebClientError.logTo(log))
+                .retryWhen(WebClientError.is5xxException())
+                .onErrorResume(throwable ->
+                        ArenaNyeBrukereResponse.of(WebClientError.describe(throwable),
+                                arenaNyeBrukere.getNyeBrukere().getFirst().getMiljoe()));
     }
 }
