@@ -6,11 +6,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import ma.glasnost.orika.MapperFacade;
 import ma.glasnost.orika.MappingContext;
-import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.histark.domain.HistarkRequest;
 import no.nav.dolly.bestilling.histark.domain.HistarkResponse;
-import no.nav.dolly.bestilling.histark.domain.JoarkHistarkTransaksjon;
+import no.nav.dolly.bestilling.histark.domain.HistarkTransaksjon;
+import no.nav.dolly.config.ApplicationConfig;
 import no.nav.dolly.domain.jpa.BestillingProgress;
 import no.nav.dolly.domain.jpa.TransaksjonMapping;
 import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
@@ -18,26 +18,30 @@ import no.nav.dolly.domain.resultset.dolly.DollyPerson;
 import no.nav.dolly.domain.resultset.histark.RsHistark;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
 import no.nav.dolly.service.DokumentService;
+import no.nav.dolly.service.TransactionHelperService;
 import no.nav.dolly.service.TransaksjonMappingService;
-import no.nav.dolly.util.TransactionHelperService;
+import no.nav.testnav.libs.reactivecore.web.WebClientError;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
-import static java.util.Objects.nonNull;
 import static no.nav.dolly.domain.resultset.SystemTyper.HISTARK;
-import static org.apache.commons.lang3.StringUtils.isBlank;
-import static org.apache.commons.lang3.StringUtils.isNotBlank;
+import static no.nav.dolly.errorhandling.ErrorStatusDecoder.encodeStatus;
+import static no.nav.dolly.errorhandling.ErrorStatusDecoder.getInfoVenter;
+import static org.apache.commons.lang3.BooleanUtils.isFalse;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class HistarkClient implements ClientRegister {
 
+    private final ApplicationConfig applicationConfig;
     private final HistarkConsumer histarkConsumer;
     private final MapperFacade mapperFacade;
     private final TransaksjonMappingService transaksjonMappingService;
@@ -47,23 +51,30 @@ public class HistarkClient implements ClientRegister {
     private final DokumentService dokumentService;
 
     @Override
-    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        if (nonNull(bestilling.getHistark())) {
+        if (isNull(bestilling.getHistark())) {
 
-            return Flux.just(dollyPerson.getIdent())
-                    .map(person -> buildRequest(bestilling.getHistark(), person, progress.getBestilling().getId()))
-                    .flatMap(request -> !transaksjonMappingService.existAlready(HISTARK,
-                            dollyPerson.getIdent(), "NA", bestilling.getId()) || isOpprettEndre ?
-
-                            histarkConsumer.postHistark(request)
-                                    .mapNotNull(status -> getStatus(dollyPerson.getIdent(), bestilling.getId(), status)) :
-                            Mono.just("OK")
-                    )
-                    .map(status -> futurePersist(progress, status));
+            return Mono.empty();
         }
 
-        return Flux.empty();
+        return oppdaterStatus(progress, getInfoVenter(HISTARK.name()))
+                .then(transaksjonMappingService.existAlready(HISTARK,
+                        dollyPerson.getIdent(), "NA", bestilling.getId()))
+                .flatMap(eksisterer -> {
+                    if (isFalse(eksisterer) || isOpprettEndre) {
+                        return Flux.fromIterable(bestilling.getHistark().getDokumenter())
+                                .flatMap(dokument -> buildRequest(dokument, dollyPerson.getIdent(), progress.getBestillingId()))
+                                .flatMap(histarkConsumer::postHistark)
+                                .collectList()
+                                .flatMap(status -> getStatus(dollyPerson.getIdent(), bestilling.getId(), status));
+                    } else {
+                        return Mono.just("OK");
+                    }
+                })
+                .timeout(Duration.ofSeconds(applicationConfig.getClientTimeout()))
+                .onErrorResume(this::getErrors)
+                .flatMap(status -> oppdaterStatus(progress, status));
     }
 
     @Override
@@ -72,60 +83,71 @@ public class HistarkClient implements ClientRegister {
         // Sletting er ikke støttet
     }
 
-    private ClientFuture futurePersist(BestillingProgress progress, String status) {
+    private Mono<BestillingProgress> oppdaterStatus(BestillingProgress progress, String status) {
 
-        return () -> {
-            transactionHelperService.persister(progress, BestillingProgress::setHistarkStatus, status);
-            return progress;
-        };
+        return transactionHelperService.persister(progress, BestillingProgress::setHistarkStatus, status);
     }
 
-    private String getStatus(String ident, Long bestillingId, HistarkResponse response) {
+    private Mono<String> getErrors(Throwable error) {
+
+        return Mono.just(encodeStatus(WebClientError.describe(error).getMessage()));
+    }
+
+    private Mono<String> getStatus(String ident, Long bestillingId, List<HistarkResponse> response) {
 
         log.info("Histark response {} mottatt for ident {}", response, ident);
 
         if (isNull(response)) {
-            return null;
+            return Mono.empty();
         }
 
-        if (isBlank(response.getFeilmelding())) {
-
-            saveTransaksjonId(response.getHistarkId(), ident, bestillingId);
-            return "OK";
-
-        } else {
-
-            return String.format("FEIL=Teknisk feil se logg! %s",
-                    isNotBlank(response.getFeilmelding()) ?
-                            ErrorStatusDecoder.encodeStatus(errorStatusDecoder.getStatusMessage(response.getFeilmelding())) :
-                            "UKJENT");
-        }
+        return saveTransaksjonId(response, ident, bestillingId)
+                .then(Flux.fromIterable(response)
+                        .map(status ->
+                                status.isOk() ? "OK: %s".formatted(status.getDokument()) :
+                                        "FEIL: %s".formatted(encodeStatus(errorStatusDecoder.getStatusMessage(status.getFeilmelding()))))
+                        .collect(Collectors.joining(",")));
     }
 
-    private HistarkRequest buildRequest(RsHistark rsHistark, String ident, Long bestillingId) {
+    private Mono<HistarkRequest> buildRequest(RsHistark.RsHistarkDokument dokument, String ident, Long bestillingId) {
 
-        var context = new MappingContext.Factory().getContext();
-        context.setProperty("personIdent", ident);
-        context.setProperty("dokumenter", dokumentService.getDokumenterByBestilling(bestillingId));
-
-        return mapperFacade.map(rsHistark, HistarkRequest.class, context);
+        return dokumentService.getDokumenterByBestilling(bestillingId)
+                .collectList()
+                .map(dokumenter -> {
+                    var context = new MappingContext.Factory().getContext();
+                    context.setProperty("personIdent", ident);
+                    context.setProperty("dokumenter", dokumenter);
+                    return context;
+                })
+                .map(context -> mapperFacade.map(dokument, HistarkRequest.class, context));
     }
 
-    private void saveTransaksjonId(String histarkId, String ident, Long bestillingId) {
+    private Mono<Void> saveTransaksjonId(List<HistarkResponse> histarkIds, String ident, Long bestillingId) {
 
         log.info("Lagrer transaksjon for ident {}", ident);
 
-        transaksjonMappingService.save(
-                TransaksjonMapping.builder()
-                        .ident(ident)
-                        .bestillingId(bestillingId)
-                        .transaksjonId(toJson(JoarkHistarkTransaksjon.builder()
-                                .dokumentInfoId(histarkId)
-                                .build()))
-                        .datoEndret(LocalDateTime.now())
-                        .miljoe("NA")
-                        .system(HISTARK.name())
-                        .build());
+        if (histarkIds.stream().anyMatch(HistarkResponse::isOk)) {
+
+            return transaksjonMappingService.save(
+                            TransaksjonMapping.builder()
+                                    .ident(ident)
+                                    .bestillingId(bestillingId)
+                                    .transaksjonId(toJson(histarkIds.stream()
+                                            .filter(HistarkResponse::isOk)
+                                            .map(HistarkResponse::getId)
+                                            .map(histarkId -> HistarkTransaksjon.builder()
+                                                    .dokumentInfoId(histarkId)
+                                                    .build())
+                                            .toList()))
+                                    .datoEndret(LocalDateTime.now())
+                                    .miljoe("NA")
+                                    .system(HISTARK.name())
+                                    .build())
+                    .then();
+        } else {
+
+            return Mono.empty();
+        }
     }
 
     private String toJson(Object object) {
