@@ -1,23 +1,22 @@
 package no.nav.testnav.apps.syntvedtakshistorikkservice.consumer.command.search;
 
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import no.nav.testnav.apps.syntvedtakshistorikkservice.consumer.response.search.PersonSearchResponse;
-import no.nav.testnav.apps.syntvedtakshistorikkservice.consumer.util.WebClientFilter;
-import no.nav.testnav.libs.dto.personsearchservice.v1.PersonDTO;
-import no.nav.testnav.libs.dto.personsearchservice.v1.search.PersonSearch;
+import no.nav.testnav.libs.data.dollysearchservice.v1.legacy.PersonDTO;
+import no.nav.testnav.libs.data.dollysearchservice.v1.legacy.PersonSearch;
+import no.nav.testnav.libs.reactivecore.web.WebClientError;
+import no.nav.testnav.libs.reactivecore.web.WebClientHeader;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
-import reactor.util.retry.Retry;
 
-import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.Callable;
 
-import static no.nav.testnav.apps.syntvedtakshistorikkservice.consumer.util.Headers.AUTHORIZATION;
-
-@AllArgsConstructor
+@RequiredArgsConstructor
+@Slf4j
 public class PersonSearchCommand implements Callable<Mono<PersonSearchResponse>> {
 
     private final PersonSearch request;
@@ -30,21 +29,21 @@ public class PersonSearchCommand implements Callable<Mono<PersonSearchResponse>>
 
     @Override
     public Mono<PersonSearchResponse> call() {
-        return webClient.post()
-                .uri(builder ->
-                        builder.path("/api/v1/person")
-                                .build()
-                )
-                .header(AUTHORIZATION, "Bearer " + token)
+        return webClient
+                .post()
+                .uri(builder -> builder.path("/api/v1/legacy").build())
+                .headers(WebClientHeader.bearer(token))
                 .body(BodyInserters.fromPublisher(Mono.just(request), PersonSearch.class))
                 .retrieve()
                 .toEntity(RESPONSE_TYPE)
                 .flatMap(entity -> {
                     var headers = entity.getHeaders().get(NUMBER_OF_ITEMS_HEADER);
-                    var numberOfItems = headers != null && !headers.isEmpty() ? headers.get(0) : "0";
+                    var numberOfItems = headers != null && !headers.isEmpty() ? headers.getFirst() : "0";
                     return Mono.just(new PersonSearchResponse(Integer.parseInt(numberOfItems), entity.getBody()));
                 })
-                .retryWhen(Retry.backoff(3, Duration.ofSeconds(5))
-                        .filter(WebClientFilter::is5xxException));
+                .doOnError(WebClientError.logTo(log))
+                .retryWhen(WebClientError.is5xxException())
+                .onErrorResume(error -> Mono.empty());
     }
+
 }
